tests/baselines/reference/genericClasses3.errors.txt
genericClasses3.ts(12,9): error TS2454: Variable 'v2' is used before being assigned.
genericClasses3.ts(13,9): error TS2454: Variable 'v2' is used before being assigned.
genericClasses3.ts(15,9): error TS2454: Variable 'v2' is used before being assigned.


==== genericClasses3.ts (3 errors) ====
    class B<T> {
        a: T;
        b: T;
    }
    
    class C<T> extends B<T> {
        public x: T;
    }
    
    var v2: C <string>;
    
    var y = v2.x; // should be 'string'
            ~~
!!! error TS2454: Variable 'v2' is used before being assigned.
    var u = v2.a; // should be 'string'
            ~~
!!! error TS2454: Variable 'v2' is used before being assigned.
    
    var z = v2.b;
            ~~
!!! error TS2454: Variable 'v2' is used before being assigned.
    
    